# meteor-scatter

./: CLAUDE.md  README.md  deploy.toml  pyproject.toml
config/: meteor-scatter-config.toml  meteor-scatter-config.toml.template  msk144-recorder-config.toml  msk144-recorder-config.toml.template
docs/: ARCHITECTURE.md  REQUIREMENTS.md  SIGMOND-CONTRACT.md
scripts/: install.sh
src/meteor_scatter/: cli.py  contract.py
src/meteor_scatter/core/: cycle_batcher.py  recorder.py  slot.py  stream.py
src/msk144_recorder/core/: stream.py
tests/: test_config_show_apply.py  test_cycle_batcher.py  test_slot.py  test_stream_anchoring.py  test_wav.py
